--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,24 @@
 .container {
-    width: 1200px;
-    padding: 25px;
-    margin: 0 auto;
+  width: 1200px;
+  padding: 25px;
+  margin: 0 auto;
+}
+
+.modal {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  right: 100px;
+  bottom: 100px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(126, 128, 127, 0.8);
 }
