--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,6 +1,11 @@
 .modalImage {
-  width: 1020px;
-  height: 800px;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   object-fit: cover;
+}
+
+.modalWrapper {
+  width: 100%;
+  height: 100%;
 }
